src/test/ui/parser/issue-59418.stderr
error: suffixes on tuple indexes are invalid
  --> $DIR/issue-59418.rs:5:15
   |
LL |     let b = a.1suffix;
   |               ^^^^^^^ invalid suffix `suffix`

error: suffixes on tuple indexes are invalid
  --> $DIR/issue-59418.rs:9:15
   |
LL |     let d = c.1suffix;
   |               ^^^^^^^ invalid suffix `suffix`

error: aborting due to 2 previous errors

